@@ -1,5 +1,11 @@
 2008-04-02  Dan Williams  <dcbw@redhat.com>
 
+	* src/utils/utils.c
+		- (connection_valid_for_wired): handle PPPoE connections & devices
+			correctly
+
+2008-04-02  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (nma_menu_add_devices): fix # of devices logic; handle CDMA & GSM
 			devices too
